# Fiona

./: .buildinfo  .coveragerc  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  CHANGES.txt  CITATION.cff  CITATION.txt  CREDITS.txt  Dockerfile  FAQ.rst  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  README.html  README.rst  README.txt  SECURITY.md  appveyor.yml  benchmark-max.py  benchmark-min.py  benchmark.py  cli.html  cypsrc  environment.yml  example.py  genindex.html  index.html  manual.html  objects.inv  pep-508-install  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-types.txt  requirements.txt  search.html  searchindex.js  (+3 more)
.github/: dependabot.yaml
.github/workflows/: ci_linux.yml  ci_linux_docker.yml  ci_macos.yml  ci_windows.yml  linux.yml  mypy-test.yaml  rstcheck.yml  scorecard.yml  test_gdal_latest.yaml  test_gdal_latest.yml  tests.yaml  tests.yml  wheels.yml
_sources/: README.txt  cli.txt  index.txt  manual.txt
ci/: gdal-compile.sh  install_gdal.sh  install_proj.sh  manylinux2014_x86_64-vcpkg-gdal.Dockerfile  requirements-wheel-test.txt  vcpkg.json
ci/custom-triplets/: arm64-linux-dynamic-release.cmake  arm64-osx-dynamic-release.cmake  x64-linux-dynamic.cmake  x64-osx-dynamic.cmake
ci/rstcheck/: requirements.in  requirements.txt
debian/: changelog  control  copyright
docs/: Makefile  cli.rst  conf.py  encoding.txt  fiona.fio.rst  fiona.rst  index.rst  install.rst  manual.rst  modules.rst  reading-data.txt
docs/data/: test_uk.dbf  test_uk.gpkg  test_uk.shp  test_uk.shx
docs/rfc/: 0000-template.md
examples/: io.py  open.py  orient-ccw.py  with-descartes-functional.py  with-descartes.py  with-pyproj.py  with-shapely.py
fiona/: __init__.py  __init__.pyi  _cpl.pxd  _crs.pxd  _crs.pyx  _csl.pxd  _drivers.pyx  _env.pxd  _env.pyi  _env.pyx  _err.pxd  _err.pyx  _geometry.pxd  _geometry.pyi  _geometry.pyx  _loading.py  _meta.pyx  _path.py  _shim.pyx  _shim1.pxd  _shim1.pyx  _shim2.pxd  _shim2.pyx  _shim22.pxd  _shim22.pyx  _shim3.pxd  _shim3.pyx  _show_versions.py  _transform.pyx  _vectorized.pyx  _vsiopener.pyx  collection.py  collection.pyi  compat.py  compat.pyi  crs.py  crs.pyi  crs.pyx  drvsupport.py  drvsupport.pyi  (+41 more)
fiona/_vendor/munch/: __init__.py  python3_compat.py
fiona/fio/: bounds.py  calc.py  cat.py  cli.py  collect.py  distrib.py  dump.py  env.py  features.py  filter.py  fio.py  helpers.py  helpers.pyi  info.py  insp.py  load.py  ls.py  main.py  main.pyi  options.py  options.pyi  rm.py
fiona/proj_data/: CHENYX06.gsb  CHENYX06_etrs.gsb  CHENYX06a.gsb
scripts/: check_deprecated.py  check_urls.py  fio  fiona.insp  remove_version.py  travis_filegdb_install.sh  travis_gdal_install.sh  travis_proj_install.sh
src/fiona/: __init__.py  _drivers.pyx  collection.py  collection.pyx  crs.py  feature.py  geometry.pyx  inspector.py  ograpi.pxd  ogrext.pyx  ogrinit.pyx  rfc3339.py  this_bis.py  tool.py  workspace.pyx
src/fiona/geometry/: _ogrgeom.pyx
src/mill/: __init__.py  collection.c  collection.pyx  ogrinit.c  ogrinit.pyx  workspace.c  workspace.pyx
tests/: __init__.py  conftest.py  fixtures.py  test__env.py  test__path.py  test_bigint.py  test_binary_field.py  test_bounds.py  test_bytescollection.py  test_cli.py  test_collection.py  test_collection_crs.py  test_collection_legacy.py  test_compound_crs.py  test_crs.py  test_cursor_interruptions.py  test_curve_geometries.py  test_data_paths.py  test_datetime.py  test_doctests.py  test_driver_options.py  test_drivers.py  test_drvsupport.py  test_encoding.py  test_env.py  test_feature.py  test_fio_bounds.py  test_fio_calc.py  test_fio_cat.py  test_fio_collect.py  test_fio_distrib.py  test_fio_dump.py  test_fio_filter.py  test_fio_info.py  test_fio_load.py  test_fio_ls.py  test_fio_rm.py  test_fio_vfs.py  test_geojson.py  test_geometry.py  (+34 more)
tests/data/: esri.json  issue1451.geojson  test_tin.csv  test_tin.dbf  test_tin.shp  test_tin.shx  test_tz.geojson
typings/fiona/: meta.pyi  rfc3339.pyi  vfs.pyi
typings/fiona/fio/: helpers.pyi  options.pyi
