[options.entry_points]
console_scripts =
    fio = fiona.fio.main:main_group
fiona.fio_commands =
    bounds = fiona.fio.bounds:bounds
    calc = fiona.fio.calc:calc
    cat = fiona.fio.cat:cat
    collect = fiona.fio.collect:collect
    distrib = fiona.fio.distrib:distrib
    dump = fiona.fio.dump:dump
    env = fiona.fio.env:env
    filter = fiona.fio.filter:filter
    info = fiona.fio.info:info
    insp = fiona.fio.insp:insp
    load = fiona.fio.load:load
    ls = fiona.fio.ls:ls
    rm = fiona.fio.rm:rm
